Content and style update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,16 +13,21 @@
     
     <header class="site-header">
         <div class="row">
-    		<a href="{{page.relative}}" title="home, homie">
+    		<a href="{{ page.relative }}" title="home, homie">
     			<h2>
     				Andy Skiles
     			</h2>
     		</a>
 
-            <nav>
+            <nav role="navigation">
                <a href="{{page.relative}}vault" title="da vault">
                     <h4>
                         da vault
+                    </h4>
+                </a>
+                <a href="{{page.relative}}about" title="about">
+                    <h4>
+                        about
                     </h4>
                 </a>
             </nav>
