--- a/development/scss/layout/_l-page.scss
+++ b/development/scss/layout/_l-page.scss
@@ -3,12 +3,27 @@ main {
 }
 
 
+.vault .row{
+	
+	@include bp(l) {
+		display: flex;
+		flex-direction: row;
+	}
+}
+
+.vault .cat-block {
+
+	@include bp(l) {
+		flex-grow: 1;
+	}
+}
+
 
 article {}
 
 article header{}
 
-article section, .pagination {
+.page section, article section, .pagination, {
 	@include container(95vw);
 
 	@include bp(m) {
